--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>বগুড়া ব্লাড ডোনেশন সার্টিফিকেট জেনারেটর</title>
+    <title>বগুড়া অনলাইন রক্তদান সংগঠন</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf-lib/1.17.1/pdf-lib.min.js"></script>
     <style>
         body {
@@ -58,7 +58,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>ব্লাড ডোনেশন সার্টিফিকেট জেনারেটর</h1>
+        <h1> বগুড়া অনলাইন রক্তদান সংগঠন সার্টিফিকেট</h1>
         <input type="text" id="userName" placeholder="আপনার পুরো নাম লিখুন">
         <button id="generateBtn" onclick="generateCertificate()">সার্টিফিকেট ডাউনলোড করুন</button>
         <div class="preview" id="preview">
