--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <script>
         // Set your secret password here
-        const SECRET_PASSWORD = "BoguraBlood123";
+        const SECRET_PASSWORD = "••••••••••";
         
         function validatePassword() {
             const password = document.getElementById('password').value.trim();
