--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
     <div class="container">
         <h1>বগুড়া অনলাইন রক্তদান সংগঠন সার্টিফিকেট</h1>
         <input type="text" id="userName" placeholder="আপনার পুরো নাম লিখুন">
-        <button id="generateBtn" onclick="openForm()">সার্টিফিকেট ডাউনলোড করুন</button>
+        <button id="generateBtn" onclick="openForm()">পরের ধাপে এগিয়ে যান</button>
         <div class="preview" id="preview">
             <p>আপনার সার্টিফিকেট তৈরি হচ্ছে...</p>
         </div>
         
         <div id="formContainer">
-            <h2>দয়া করে ফর্মটি পূরণ করুন</h2>
+            <h2>দয়া করে নিচের ফর্মটি পূরণ করে সাবমিট বাটনে ক্লিক করুন</h2>
             <iframe id="formFrame" src="about:blank"></iframe>
             <button onclick="checkFormSubmission()">ফর্ম সাবমিট করেছি, সার্টিফিকেট ডাউনলোড করুন</button>
         </div>
