--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
         
         <div id="formContainer">
-            <h2>দয়া করে নিচের ফর্মটি পূরণ করে সাবমিট বাটনে ক্লিক করুন</h2>
+            <h2>দয়া করে নিচের ফর্মটি পূরণ করে 'Submit' বাটনে ক্লিক করুন তারপর 'ডাউনলোড করুন'</h2>
             <iframe id="formFrame" src="about:blank"></iframe>
             <button onclick="checkFormSubmission()">ফর্ম সাবমিট করেছি, সার্টিফিকেট ডাউনলোড করুন</button>
         </div>
